[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/gdyarn/yarn_runner.gd" type="Script" id=2]
[ext_resource path="res://addons/gdyarn/yarn_gui.gd" type="Script" id=3]
[ext_resource path="res://addons/gdyarn/core/variable_storage.gd" type="Script" id=4]
[ext_resource path="res://addons/gdyarn/compiled_yarn_program.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/Newfont.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/SimpleDialogue.gd" type="Script" id=8]
[ext_resource path="res://Assets/Mockup/bg.png" type="Texture" id=12]

[sub_resource type="Resource" id=1]
resource_local_to_scene = true
script = ExtResource( 5 )
_programName = "compiled_yarn_program"
_directory = "res://Dialogue"
_yarnPrograms = [ "res://Dialogue/SampleScene.yarn" ]

[node name="Shop" type="Node2D"]
scale = Vector2( 1, 1.01068 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 639.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )

[node name="Character" type="Node2D" parent="."]
position = Vector2( 5, -1.97887 )

[node name="left" type="Node2D" parent="Character"]
position = Vector2( 57, 82 )

[node name="right" type="Node2D" parent="Character"]
position = Vector2( 167, 82 )

[node name="VariableStorage" type="Node" parent="."]
script = ExtResource( 4 )

[node name="YarnDisplay" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 160.0
script = ExtResource( 3 )
_yarnRunner = NodePath("../YarnRunner")
_text = NodePath("Dialogue/VBoxContainer/RichTextLabel")
_namePlate = NodePath("Dialogue/VBoxContainer/Name")
_textSpeed = 20

[node name="Dialogue" type="PanelContainer" parent="YarnDisplay"]
margin_left = 24.0
margin_top = 104.0
margin_right = 216.0
margin_bottom = 160.0
grow_vertical = 0
rect_min_size = Vector2( 192, 56 )
theme = ExtResource( 6 )
script = ExtResource( 8 )
Characters = NodePath("../../Character")

[node name="VBoxContainer" type="VBoxContainer" parent="YarnDisplay/Dialogue"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
size_flags_vertical = 3

[node name="Name" type="Label" parent="YarnDisplay/Dialogue/VBoxContainer"]
margin_right = 176.0
margin_bottom = 8.0
size_flags_vertical = 0
theme = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="YarnDisplay/Dialogue/VBoxContainer"]
margin_top = 12.0
margin_right = 176.0
margin_bottom = 40.0
rect_clip_content = false
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_constants/line_separation = 2
bbcode_enabled = true
meta_underlined = false
scroll_active = false

[node name="YarnRunner" type="Node" parent="."]
script = ExtResource( 2 )
_autoStart = true
_variableStorage = NodePath("../VariableStorage")
_compiledYarnProgram = SubResource( 1 )

[connection signal="line_finished" from="YarnDisplay" to="YarnDisplay/Dialogue" method="_on_YarnDisplay_line_finished"]
[connection signal="line_started" from="YarnDisplay" to="YarnDisplay/Dialogue" method="_on_YarnDisplay_line_started"]
[connection signal="command_emitted" from="YarnRunner" to="YarnDisplay/Dialogue" method="_on_YarnRunner_command_emitted"]
[connection signal="line_emitted" from="YarnRunner" to="YarnDisplay/Dialogue" method="_on_YarnRunner_line_emitted"]
